--- a/.gitignore
+++ b/.gitignore
@@ -140,6 +140,7 @@ venv.bak/
 
 # mkdocs documentation
 /site
+/wandb
 
 # mypy
 .mypy_cache/
@@ -154,6 +155,7 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
