--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "1.0.0"
 description = ""
 license = "Apache-2.0"
 dependencies = [
-    "flwr[simulation]>=1.16.0",
+    "flwr[simulation]>=1.17.0",
     "flwr-datasets[vision]>=0.5.0",
     "torch==2.5.1",
     "torchvision==0.20.1",
@@ -28,9 +28,14 @@ serverapp = "flsys.server_app:app"
 clientapp = "flsys.client_app:app"
 
 [tool.flwr.app.config]
-num-server-rounds = 10
-fraction-fit = 1.0
-local-epochs = 2
+num-server-rounds = 1
+fraction-fit = 0.5
+local-epochs = 1
+# Parameters for the SecAgg+ protocol
+num-shares = 5
+reconstruction-threshold = 2
+max-weight = 9000
+timeout = 15.0
 
 
 [tool.flwr.federations]
