--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,10 @@ version = "1.0.0"
 description = ""
 license = "Apache-2.0"
 dependencies = [
-    "flwr[simulation]>=1.17.0",
+    "flwr[simulation]>=1.18.0",
     "flwr-datasets[vision]>=0.5.0",
-    "torch==2.5.1",
-    "torchvision==0.20.1",
+    "torch>=2.5.1",
+    "torchvision>=0.20.1",
     "wandb",
     "matplotlib",
     "tqdm",
@@ -34,7 +34,7 @@ local-epochs = 1
 # Parameters for the SecAgg+ protocol
 num-shares = 5
 reconstruction-threshold = 2
-max-weight = 9000
+max-weight = 7000
 timeout = 15.0
 
 
