--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ serverapp = "flsys.server_app:app"
 clientapp = "flsys.client_app:app"
 
 [tool.flwr.app.config]
-num-server-rounds = 3
+num-server-rounds = 1
 fraction-fit = 0.5
 local-epochs = 1
 # Parameters for the SecAgg+ protocol
@@ -48,5 +48,5 @@ options.backend.client-resources.num-cpus = 4
 
 
 [tool.flwr.federations.local-deployment]
-address = "127.0.0.1:9093"
+address = "127.0.0.1:9093"  # 多机运行时需要使用局域网地址
 root-certificates = "./certificates/ca.crt"
